--- a/NMDB/NMDB-API/appsettings.json
+++ b/NMDB/NMDB-API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=NMDB;User Id=root;Password=;"
+  },
   "AllowedHosts": "*"
 }
