--- a/NMDB/NMDB-DAL/NMDB-DAL.csproj
+++ b/NMDB/NMDB-DAL/NMDB-DAL.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NMDB-BLL\NMDB-BLL.csproj" />
+  </ItemGroup>
+
 </Project>
