--- a/NMDB/NMDB-Common/NMDB-Common.csproj
+++ b/NMDB/NMDB-Common/NMDB-Common.csproj
@@ -2,13 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>NMDB_BLL</RootNamespace>
+    <RootNamespace>NMDB_Common</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NMDB-Common\NMDB-Common.csproj" />
-  </ItemGroup>
 
 </Project>
