--- a/NMDB/NMDB-DAL/NMDB-DAL.csproj
+++ b/NMDB/NMDB-DAL/NMDB-DAL.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NMDB-BLL\NMDB-BLL.csproj" />
+    <ProjectReference Include="..\NMDB-Common\NMDB-Common.csproj" />
   </ItemGroup>
 
 </Project>
