Added migration, Modified YAML file for CD

--- a/NMDB/NMDB-API/appsettings.json
+++ b/NMDB/NMDB-API/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=NMDB;User Id=root;Password=;"
   },
+  "KeyVault": {
+    "KeyvaultURL": "https://reelio-prod.vault.azure.net"
+  },
   "AllowedHosts": "*"
 }
