--- a/NMDB/Dockerfile
+++ b/NMDB/Dockerfile
@@ -1,21 +1,32 @@
-#Build Stage
+# Build Stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
+# Set the working directory
 WORKDIR /source
+
+# Copy all project files into the container
 COPY . .
-RUN dotnet restore "./NMDB-API/NMDB-API.csproj"
-RUN dotnet publish "./NMDB-API/NMDB-API.csproj" -c release -o /app --no-restore
-RUN dotnet restore "./NMDB-BLL/NMDB-BLL.csproj"
-RUN dotnet publish "./NMDB-BLL/NMDB-BLL.csproj" -c release -o /app --no-restore
-RUN dotnet restore "./NMDB-DAL/NMDB-DAL.csproj"
-RUN dotnet publish "./NMDB-DAL/NMDB-DAL.csproj" -c release -o /app --no-restore
-RUN dotnet restore "./NMDB-Common/NMDB-Common.csproj"
-RUN dotnet publish "./NMDB-Common/NMDB-Common.csproj" -c release -o /app --no-restore
 
-#Serve Stage
+# Restore dependencies for the solution (instead of individual projects)
+RUN dotnet restore "./NMDB.sln"
+
+# Publish all projects in one step
+RUN dotnet publish "./NMDB-API/NMDB-API.csproj" -c Release -o /app --no-restore && \
+    dotnet publish "./NMDB-BLL/NMDB-BLL.csproj" -c Release -o /app --no-restore && \
+    dotnet publish "./NMDB-DAL/NMDB-DAL.csproj" -c Release -o /app --no-restore && \
+    dotnet publish "./NMDB-Common/NMDB-Common.csproj" -c Release -o /app --no-restore
+
+# Serve Stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS serve
-WORKDIR /app
-COPY --from=build /app ./
 
+# Set the working directory for the app
+WORKDIR /app
+
+# Copy the build output from the build stage to the serve stage
+COPY --from=build /app ./ 
+
+# Expose the application port
 EXPOSE 8080
 
+# Set the entrypoint to the API DLL
 ENTRYPOINT ["dotnet", "NMDB-API.dll"]
