--- a/NMDB/NMDB-API/NMDB-API.csproj
+++ b/NMDB/NMDB-API/NMDB-API.csproj
@@ -7,11 +7,13 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <RootNamespace>NMDB_API</RootNamespace>
     <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
+    <UserSecretsId>98d0e38b-4b14-402f-a961-347a2e75ed32</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
     <PackageReference Include="Azure.Identity" Version="1.13.1" />
+    <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.7.0" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
