--- a/NMDB/NMDB-API/appsettings.Development.json
+++ b/NMDB/NMDB-API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=reelio.mysql.database.azure.com;port=3306; Database=nmdb;User Id=NielsAdmin;Password=$Jz3Y#6Qvwdmp$;"
+    "DefaultConnection": "Server=localhost;Database=nmdb;User Id=root;Password=;"
   },
   "AllowedHosts": "*"
 }
