--- a/NMDB/NMDBTests/NMDBTests.csproj
+++ b/NMDB/NMDBTests/NMDBTests.csproj
@@ -14,6 +14,13 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.4" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NMDB-BLL\NMDB-BLL.csproj" />
+    <ProjectReference Include="..\NMDB-Common\NMDB-Common.csproj" />
   </ItemGroup>
 
 </Project>
